--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
 	},
 	"homepage": "https://github.com/muhammad-minhaj/portfolio-website#readme",
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"gitignore": "^0.6.0",
-		"mongoose": "^5.10.3"
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.10.3",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
 		"morgan": "^1.10.0",
