Add blog with client site

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,5 @@ REACT_APP_URI_GET_BLOGS_POSTS = '/api/blogs/posts'
 
 REACT_APP_URI_GET_PORTFOLIO = '/api/portfolio/data'
 REACT_APP_URI_GET_PORTFOLIO_PROJECTS = '/api/portfolio/projects'
+
+REACT_APP_URI_GET_DATA_BLOGS = '/api/blogs/data'
