--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
+		"material-ui-search-bar": "^1.0.0",
 		"react": "^16.13.1",
-		"react-confetti": "^6.0.0",
 		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
@@ -21,7 +22,8 @@
 		"redux-devtools-extension": "^2.13.8",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
-		"scrolling-based-progressbar": "^1.21.0"
+		"scrolling-based-progressbar": "^1.21.0",
+		"timeago.js": "^4.0.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
