--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"gitignore": "^0.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.3",
-		"multer": "^1.4.2"
+		"multer": "^1.4.2",
+		"reading-time": "^1.2.0"
 	},
 	"devDependencies": {
 		"morgan": "^1.10.0",
