Completed website and control pannel

--- a/client/.env
+++ b/client/.env
@@ -7,3 +7,5 @@ REACT_APP_URI_GET_PORTFOLIO = '/api/portfolio/data'
 REACT_APP_URI_GET_PORTFOLIO_PROJECTS = '/api/portfolio/projects'
 
 REACT_APP_URI_GET_DATA_BLOGS = '/api/blogs/data'
+REACT_APP_URI_POST_SUBSCRIBE = '/api/blogs/subscribe'
+REACT_APP_URI_POST_SEND_CONTACT = '/api/contact'
