--- a/controls/.env
+++ b/controls/.env
@@ -18,8 +18,18 @@ REACT_APP_URI_PORTFOLIO_CREATE = '/api/portfolio/create'
 REACT_APP_URI_PORTFOLIO_UPDATE = '/api/portfolio/update'
 REACT_APP_URI_PORTFOLIO_DELETE = '/api/portfolio/delete'
 # Blogs Post CRUD URI 
+
 # REACT_APP_URI_GET_PORTFOLIO_PROJECT = '/api/portfolio/posts'
 REACT_APP_URI_GET_PORTFOLIO_PROJECTS = '/api/portfolio/projects'
 REACT_APP_URI_PORTFOLIO_POST_CREATE = '/api/portfolio/project/create'
 REACT_APP_URI_PORTFOLIO_POST_UPDATE = '/api/portfolio/project/update'
 REACT_APP_URI_PORTFOLIO_POST_DELETE = '/api/portfolio/project/delete'
+
+# Subscriptions
+REACT_APP_SUBS_GET_DATA = '/api/blogs/subscribe'
+REACT_APP_SUBS_DELETE_MAIL = '/api/blogs/subscribe/delete'
+REACT_APP_SUBS_UPDATE_MAIL = '/api/blogs/subscribe/update'
+REACT_APP_SUBS_SEND_MAIL = '/api/blogs/mail/send'
+
+REACT_APP_CONTACT_CRUD= '/api/contact'
+REACT_APP_CONTACT_SEND_MAIL= '/api/contact/send/mail'
