--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
+		"draft-js": "^0.11.7",
 		"material-ui-search-bar": "^1.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-draft-wysiwyg": "^1.14.5",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
