--- a/controls/package.json
+++ b/controls/package.json
@@ -3,9 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@bomdi/codebox": "^1.0.10",
-		"@editorjs/checklist": "^1.2.0",
-		"@editorjs/delimiter": "^1.2.0",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.56",
@@ -13,13 +10,11 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
-		"editorjs-alert": "^1.0.2",
-		"editorjs-github-gist-plugin": "^1.1.0",
-		"editorjs-paragraph-with-alignment": "^1.1.0",
-		"editorjs-social-post-plugin": "^1.0.0",
+		"draft-js": "^0.11.7",
 		"material-ui-dropzone": "^3.5.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-draft-wysiwyg": "^1.14.5",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
@@ -51,23 +46,5 @@
 		]
 	},
 	"proxy": "http://localhost:8080/",
-	"devDependencies": {
-		"@editorjs/code": "^2.6.0",
-		"@editorjs/editorjs": "^2.18.0",
-		"@editorjs/embed": "^2.4.0",
-		"@editorjs/header": "^2.6.0",
-		"@editorjs/image": "^2.6.0",
-		"@editorjs/inline-code": "^1.3.1",
-		"@editorjs/link": "^2.3.0",
-		"@editorjs/list": "^1.6.0",
-		"@editorjs/marker": "^1.2.2",
-		"@editorjs/paragraph": "^2.8.0",
-		"@editorjs/quote": "^2.4.0",
-		"@editorjs/raw": "^2.2.0",
-		"@editorjs/simple-image": "^1.4.0",
-		"@editorjs/table": "^1.3.0",
-		"@editorjs/warning": "^1.2.0",
-		"react-editor-js": "^1.6.2",
-		"simple-image-editorjs": "^1.4.0"
-	}
+	"devDependencies": {}
 }
