--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.3",
 		"multer": "^1.4.2",
+		"nodemailer": "^6.4.14",
 		"reading-time": "^1.2.0"
 	},
 	"devDependencies": {
