--- a/controls/.env
+++ b/controls/.env
@@ -1,4 +1,9 @@
 REACT_APP_API_KEY = '1832279280&&1869501055&&1831137771'
+
+REACT_APP_LOGIN_URI= '/api/auth/login'
+REACT_APP_TOKEN_VERIFY= '/api/auth/verify/token'
+
+
 # Blogs CRUD URI
 REACT_APP_URI_GET_BLOGS = '/api/blogs'
 
