--- a/controls/package.json
+++ b/controls/package.json
@@ -20,8 +20,6 @@
 		"react-scripts": "3.4.3",
 		"react-spinners": "^0.9.0",
 		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
@@ -46,5 +44,8 @@
 		]
 	},
 	"proxy": "http://localhost:8080/",
-	"devDependencies": {}
+	"devDependencies": {
+		"redux-devtools-extension": "^2.13.8",
+		"redux-logger": "^3.0.6"
+	}
 }
